--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -16,3 +16,5 @@ jobs:
         with:
           token: ${{ secrets.METRICS_TOKEN }}
           filename: metrics.plugin.achievements.svg
+          plugin_achievements_display: compact
+          plugin_achievements_threshold: X
